--- a/Assignment_3/form.html
+++ b/Assignment_3/form.html
@@ -8,7 +8,8 @@
     <script src="form.js"></script>
 </head>
 <body>
- <div id="form"><form action="" id="Form">
+ <div id="form"><form action="" id="Form" onsubmit= "return error()" method="post">
+ ">
     <div class="div">
         <h2 id="heading" name="heading"> STUDENT DETAILS</h2>
     </div>
@@ -39,7 +40,7 @@
        </span>   
     </div>
     <div>
-        <button type="button" id="button" onclick="Error()"> Submit</button>
+        <button type="submit" id="button"> Submit</button>
     </div>
 </form>
 <div id="warning"></div>
