--- a/Assignment_2/anand.html
+++ b/Assignment_2/anand.html
@@ -58,9 +58,7 @@
   
    <div id="contact">
     <div id="contact-form">
-      <form action="" id="form">
-
-      </form>
+      <form action="" id="Form" method="post">
       <h2 > Contact Me</h2>
       <span > Name :</span> <span> <input type="text" id="cname"></span> <span id="errorname" ></span>
       <span> Email :</span> <span><input type="text" id="email"></span>   <span id="erroremail"></span>
