--- a/Assignment_3/form.html
+++ b/Assignment_3/form.html
@@ -39,7 +39,7 @@
        </span>   
     </div>
     <div>
-        <button type="submit" id="button"> Submit</button>
+        <button type="button" id="button" onclick="Error()"> Submit</button>
     </div>
 </form>
 <div id="warning"></div>
