--- a/Assignment-6/form.html
+++ b/Assignment-6/form.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/form.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src="form.js"></script>
+    <script src="script/form.js"></script>
 </head>
 <body>
  <div id="form">
