script added as folder

--- a/Assignment_3/form.html
+++ b/Assignment_3/form.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/form.css">
-    <script src="form.js"></script>
+    <script src="script/form.js"></script>
 </head>
 <body>
  <div id="form"><form action="" id="Form">
