--- a/Assignment_2/anand.html
+++ b/Assignment_2/anand.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/anand.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src="anand.js"></script>
+    <script src="script/anand.js"></script>
 </head>
 <body>
   <div id="container">
